@@ -1,6 +1,7 @@
 <h5>1.1.1 RC</h5>  [2023/02/28]
  - fixed bug with tpl file (goffy)
  - fixed missing default value smarty (goffy)
+ - fixed bug in blocks when missing cats (goffy)
  
 <h5>1.1.0 Stable</h5>  [2023/02/28]
  - moved to last stable with smarty 2 (goffy)
